--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.sonatype.oss</groupId>
-        <artifactId>oss-parent</artifactId>
-        <version>7</version>
-    </parent>
+	<parent>
+	    <groupId>ru.megafon.datalabs</groupId>
+	    <artifactId>public-superpom</artifactId>
+	    <version>1.1.0</version>
+	</parent>
 
     <groupId>org.vaadin.spring</groupId>
     <artifactId>parent-pom</artifactId>
