--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
 
     <parent>
         <groupId>ru.megafon.datalabs</groupId>
-        <artifactId>public-superpom-hadoop</artifactId>
-        <version>1.1.0</version>
+        <artifactId>public-superpom</artifactId>
+        <version>1.1.2</version>
     </parent>
 
     <groupId>org.vaadin.spring</groupId>
